# assignment3_basecode

./: CMakeLists.txt  README.md
src/: a3_main.cpp  align.cpp  demosaic.cpp  demosaic.h
